--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Account/ForgotPassword.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Account/ForgotPassword.cshtml
@@ -9,11 +9,11 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="ForgotPassword" method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="All" class="sc-danger"></div>
             <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <span asp-validation-for="Email" class="sc-danger"></span>
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
