--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Account/Lockout.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Account/Lockout.cshtml
@@ -3,6 +3,6 @@
 }
 
 <header>
-    <h2 class="text-danger">@ViewData["Title"]</h2>
-    <p class="text-danger">This account has been locked out, please try again later.</p>
+    <h2 class="sc-danger">@ViewData["Title"]</h2>
+    <p class="sc-danger">This account has been locked out, please try again later.</p>
 </header>
