--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Account/LoginWith2fa.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Account/LoginWith2fa.cshtml
@@ -10,11 +10,11 @@
     <div class="col-md-4">
         <form method="post" asp-route-returnUrl="@ViewData["ReturnUrl"]">
             <input asp-for="RememberMe" type="hidden" />
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="All" class="sc-danger"></div>
             <div class="form-group">
                 <label asp-for="TwoFactorCode"></label>
                 <input asp-for="TwoFactorCode" class="form-control" autocomplete="off" />
-                <span asp-validation-for="TwoFactorCode" class="text-danger"></span>
+                <span asp-validation-for="TwoFactorCode" class="sc-danger"></span>
             </div>
             <div class="form-group">
                 <div class="checkbox">
