--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Account/LoginWithRecoveryCode.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Account/LoginWithRecoveryCode.cshtml
@@ -12,11 +12,11 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="All" class="sc-danger"></div>
             <div class="form-group">
                 <label asp-for="RecoveryCode"></label>
                 <input asp-for="RecoveryCode" class="form-control" autocomplete="off" />
-                <span asp-validation-for="RecoveryCode" class="text-danger"></span>
+                <span asp-validation-for="RecoveryCode" class="sc-danger"></span>
             </div>
             <button type="submit" class="btn btn-default">Log in</button>
         </form>
