--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Manage/ChangePassword.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Manage/ChangePassword.cshtml
@@ -9,21 +9,21 @@
 <div class="row">
     <div class="col-md-6">
         <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="All" class="sc-danger"></div>
             <div class="form-group">
                 <label asp-for="OldPassword"></label>
                 <input asp-for="OldPassword" class="form-control" />
-                <span asp-validation-for="OldPassword" class="text-danger"></span>
+                <span asp-validation-for="OldPassword" class="sc-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NewPassword"></label>
                 <input asp-for="NewPassword" class="form-control" />
-                <span asp-validation-for="NewPassword" class="text-danger"></span>
+                <span asp-validation-for="NewPassword" class="sc-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ConfirmPassword"></label>
                 <input asp-for="ConfirmPassword" class="form-control" />
-                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                <span asp-validation-for="ConfirmPassword" class="sc-danger"></span>
             </div>
             <button type="submit" class="btn btn-default">Update password</button>
         </form>
