--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Manage/EnableAuthenticator.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Manage/EnableAuthenticator.cshtml
@@ -36,10 +36,10 @@
                         <div class="form-group">
                             <label asp-for="Code" class="control-label">Verification Code</label>
                             <input asp-for="Code" class="form-control" autocomplete="off" />
-                            <span asp-validation-for="Code" class="text-danger"></span>
+                            <span asp-validation-for="Code" class="sc-danger"></span>
                         </div>
                         <button type="submit" class="btn btn-default">Verify</button>
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div asp-validation-summary="ModelOnly" class="sc-danger"></div>
                     </form>
                 </div>
             </div>
