--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Manage/Index.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Manage/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="row">
     <div class="col-md-6">
         <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
+            <div asp-validation-summary="All" class="sc-danger"></div>
             <div class="form-group">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
@@ -28,12 +28,12 @@
                     <input asp-for="Email" class="form-control" />
                     <button asp-action="SendVerificationEmail" class="btn btn-link">Send verification email</button>
                 }
-                <span asp-validation-for="Email" class="text-danger"></span>
+                <span asp-validation-for="Email" class="sc-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PhoneNumber"></label>
                 <input asp-for="PhoneNumber" class="form-control" />
-                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                <span asp-validation-for="PhoneNumber" class="sc-danger"></span>
             </div>
             <button type="submit" class="btn btn-default">Save</button>
         </form>
