--- a/SpaceshipClicker/SpaceshipClicker.Web/wwwroot/css/site.css
+++ b/SpaceshipClicker/SpaceshipClicker.Web/wwwroot/css/site.css
@@ -1,34 +1,159 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿@font-face {
+    font-family: 'ocraext';
+    src: url('../fonts/ocraext.ttf') format('truetype');
 }
 
-/* Wrapping element */
-/* Set some basic padding to keep content from hitting the edges */
+body {
+    padding-top: 50px;
+    padding-bottom: 20px;
+    /*background-image: url('../images/spaceship_clicker_bg.png');
+    background-size: cover;*/
+    color: #ECF0F1;
+    font-family: 'ocraext';
+    font-weight: 500;
+}
+
+hr {
+    border: 2px solid #ECF0F1;
+}
+
+.sc-brand {
+    font-weight: 900;
+    font-size: 24px;
+}
+
+.sc-link,
+.sc-link:hover {
+    color: #2980B9;
+}
+
+.sc-navbar {
+    background-color: #2980B9;
+    font-size: 16px;
+    border-bottom: 2px solid #ECF0F1;
+}
+
+.sc-navbar .navbar-header a,
+.sc-navbar .nav li a,
+footer {
+    color: #ECF0F1;
+}
+
+.sc-navbar li:hover {
+    background-color: #ECF0F1;
+    
+}
+
+.sc-navbar .nav li a:hover {
+    color: #2980B9;
+}
+
+.sc-input {
+    border-radius: 0;
+    border: none;
+    border-bottom: 2px solid #2980B9;
+    background-color: #ECF0F1;
+    color: #2C3E50;
+}
+
+.sc-btn {
+    color: #ECF0F1;
+    background-color: #2980B9;
+    border: none;
+    border-bottom: 2px solid #ECF0F1;
+    border-radius: 0;
+}
+
+.sc-btn:hover {
+    color: #2980B9;
+    background-color: #ECF0F1;
+    border-bottom: 2px solid #2980B9;
+}
+
+.sc-danger {
+    color: #E74C3C;
+}
+
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-/* Carousel */
+.carousel-caption {
+    padding-bottom: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
 .carousel-caption p {
     font-size: 20px;
     line-height: 1.4;
 }
 
-/* Make .svg files in the carousel display properly in older browsers */
 .carousel-inner .item img[src$=".svg"] {
     width: 100%;
 }
 
-/* QR code generator */
+.carousel-control.left,
+.carousel-control.right {
+    background-image: none;
+}
+
+.carousel-control.left:hover,
+.carousel-control.right:hover {
+    background-color: rgba(236, 240, 241, 0.01);
+}
+
 #qrCode {
     margin: 15px;
 }
 
-/* Hide/rearrange for smaller screens */
+/*Scrolling animation*/
+.overlay {
+    position: fixed;
+    background: url('../images/spaceship_clicker_bg.png');
+    -webkit-animation: 100s scroll infinite linear;
+    -moz-animation: 100s scroll infinite linear;
+    -o-animation: 100s scroll infinite linear;
+    animation: 100s scroll infinite linear;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@-webkit-keyframes scroll {
+    100% {
+        background-position: 0px -3000px;
+    }
+}
+
+@-moz-keyframes scroll {
+    100% {
+        background-position: 0px -3000px;
+    }
+}
+
+@-o-keyframes scroll {
+    100% {
+        background-position: 0px -3000px;
+    }
+}
+
+@-ms-keyframes scroll {
+    100% {
+        background-position: 0px -3000px;
+    }
+}
+
+@keyframes scroll {
+    100% {
+        background-position: 0px -3000px;
+    }
+}
+/*End scrolling animation*/
+
 @media screen and (max-width: 767px) {
-    /* Hide captions */
     .carousel-caption {
         display: none;
     }
