--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_Layout.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_Layout.cshtml
@@ -39,8 +39,9 @@
     </nav>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer>
+        
+        <footer class="sc-footer">
+            <hr />
             <p>&copy; 2017 - Spaceship Clicker</p>
         </footer>
     </div>
