--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/_ViewImports.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using SpaceshipClicker.Web.Models
 @using SpaceshipClicker.Web.Models.AccountViewModels
 @using SpaceshipClicker.Web.Models.ManageViewModels
+@using SpaceshipClicker.Web.Models.ReviewViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
