--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Account/Login.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Account/Login.cshtml
@@ -1,8 +1,4 @@
-﻿@using System.Collections.Generic
-@using System.Linq
-@using Microsoft.AspNetCore.Http
-@using Microsoft.AspNetCore.Http.Authentication
-@using SpaceshipClicker.Data.Models
+﻿@using SpaceshipClicker.Data.Models
 @model LoginViewModel
 @inject SignInManager<User> SignInManager
 
