--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/_ViewImports.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @using Microsoft.AspNetCore.Identity
 @using SpaceshipClicker.Constants
+@using SpaceshipClicker.Data.Models;
 @using SpaceshipClicker.Services.Models.Reviews
 @using SpaceshipClicker.Web
 @using SpaceshipClicker.Web.Models
