added authorization and admin area

--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_LoginPartial.cshtml
@@ -8,9 +8,6 @@
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
-            <!--<li>
-        <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-    </li>-->
             <li>
                 <a asp-area="" asp-controller="" asp-action="" title="">Crew</a>
             </li>
@@ -25,11 +22,12 @@
             </li>
         </ul>
         </form>
-    }
-    else
-    {
-        <ul class="nav navbar-nav navbar-right">
-            <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-            <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
-        </ul>
-    }
+}
+else
+{
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="/Review/List/DateDescending">Reviews</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
+        <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
+    </ul>
+}
