--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Home/Index.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
                             <i class="fa fa-star-half-o" aria-hidden="true"></i>
                         }
 
-                        @for (int i = 0; i < (Constants.ReviewMaxScore - review.Score) / 2; i++)
+                        @for (int i = 0; i < (GlobalConstants.ReviewMaxScore - review.Score) / 2; i++)
                         {
                             <i class="fa fa-star-o" aria-hidden="true"></i>
                         }
