--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Review/List.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Review/List.cshtml
@@ -8,7 +8,6 @@
     <h2>Order</h2>
     <hr />
     <select class="form-control sc-input" onchange="location = this.value;">
-
         @if (Model.Order == ReviewOrder.StarsAscending)
         {
             <option selected value="/Review/List/StarsAscending@(Context.Request.QueryString.Value)">Stars Ascending</option>
@@ -89,7 +88,7 @@
                         <i class="fa fa-star-half-o" aria-hidden="true"></i>
                     }
 
-                    @for (int i = 0; i < (Constants.ReviewMaxScore - review.Score) / 2; i++)
+                    @for (int i = 0; i < (GlobalConstants.ReviewMaxScore - review.Score) / 2; i++)
                     {
                         <i class="fa fa-star-o" aria-hidden="true"></i>
                     }
