--- a/SpaceshipClicker/SpaceshipClicker.Web/Areas/Admin/Views/Reviews/List.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Areas/Admin/Views/Reviews/List.cshtml
@@ -52,10 +52,10 @@
                     <tr class="sc-row">
                         <td>@review.Text.Substring(0, 80)...</td>
                         <td>@(review.Score / 2.0)</td>
-                        <td><a class="sc-link" href="/admin/user/details/@review.UserId">@review.ByUser</a></td>
+                        <td><a class="sc-link" href="/admin/users/details/@review.UserId">@review.ByUser</a></td>
                         <td>@(review.IsApproved ? "Yes" : "No")</td>
                         <td>@(review.IsDefault ? "Yes" : "No")</td>
-                        <td><a class="sc-link" href="/admin/review/edit/@review.Id">Edit</a></td>
+                        <td><a class="sc-link" href="/admin/reviews/edit/@review.Id">Edit</a></td>
                     </tr>
                 }
             </tbody>
@@ -64,17 +64,17 @@
         <div class="text-center">
             <ul class="pagination">
                 <li class="page-item @previousDisabled">
-                    <a class="page-link @previousDisabled" href="/admin/review/list/@Model.PreviousPage@(Context.Request.QueryString.Value)" aria-label="Previous">
+                    <a class="page-link @previousDisabled" href="/admin/reviews/list/@Model.PreviousPage@(Context.Request.QueryString.Value)" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                         <span class="sr-only">Previous</span>
                     </a>
                 </li>
                 @for (int i = 1; i <= Model.TotalPages; i++)
                 {
-                    <li class="page-item @(Model.CurrentPage == i ? "active" : string.Empty)"><a class="page-link" href="/admin/review/list/@i@(Context.Request.QueryString.Value)">@i</a></li>
+                    <li class="page-item @(Model.CurrentPage == i ? "active" : string.Empty)"><a class="page-link" href="/admin/reviews/list/@i@(Context.Request.QueryString.Value)">@i</a></li>
                 }
                 <li class="page-item @nextDisabled">
-                    <a class="page-link @nextDisabled" href="/admin/review/list/@Model.NextPage@(Context.Request.QueryString.Value)" aria-label="Next">
+                    <a class="page-link @nextDisabled" href="/admin/reviews/list/@Model.NextPage@(Context.Request.QueryString.Value)" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                     </a>
