--- a/SpaceshipClicker/SpaceshipClicker.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using SpaceshipClicker.Web.Models
+﻿@using SpaceshipClicker.Constants
+@using SpaceshipClicker.Web.Models
 @using SpaceshipClicker.Web.Areas.Admin.Models.ReviewViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
