--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Reviews/_ReviewForm.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Reviews/_ReviewForm.cshtml
@@ -1,10 +1,6 @@
-﻿@model ReviewCreateViewModel
+﻿@model ReviewFormViewModel
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
-
-@{
-    ViewData["Title"] = "Review in Progress - Spaceship Clicker";
-}
 
 @if (SignInManager.IsSignedIn(User))
 {
@@ -24,6 +20,6 @@
             <input asp-for="Stars" class="form-control sc-input" />
             <span asp-validation-for="Stars" class="sc-danger"></span>
         </div>
-        <button type="submit" class="btn btn-default sc-btn sc-button-post">Post</button>
+        <button type="submit" class="btn btn-default sc-btn sc-button-post">@ViewData["ButtonText"]</button>
     </form>
 </div>
