--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_LoginPartial.cshtml
@@ -8,25 +8,39 @@
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a asp-area="" asp-controller="" asp-action="" title="">Crew</a>
-            </li>
-            <li>
-                <a asp-area="" asp-controller="" asp-action="" title="">Notifications</a>
-            </li>
-            <li>
-                <a asp-area="" asp-controller="" asp-action="" title="">Messages</a>
-            </li>
+            @if (User.IsInRole(GlobalConstants.AdministratorRole))
+            {
+                <li>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Reviews<span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu sc-dropdown-menu">
+                        <li><a href="/Reviews/List/DateDescending">As User</a></li>
+                        <li><a href="/Admin/Reviews/List/1">As Admin</a></li>
+                    </ul>
+                </li>
+            }
+            else
+            {
+                <li>
+                    <a asp-area="" asp-controller="" asp-action="" title="">Crew</a>
+                </li>
+                <li>
+                    <a asp-area="" asp-controller="" asp-action="" title="">Notifications</a>
+                </li>
+                <li>
+                    <a asp-area="" asp-controller="" asp-action="" title="">Messages</a>
+                </li>
+            }   
             <li class="sc-logout-fix">
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
             </li>
         </ul>
-        </form>
+    </form>
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="/Review/List/DateDescending">Reviews</a></li>
+        <li><a href="/Reviews/List/DateDescending">Reviews</a></li>
         <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
         <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
     </ul>
