implemented delete review

--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Reviews/Edit.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Reviews/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Editing Review - Spaceship Clicker";
-    ViewData["ButtonText"] = "Edit";
+    ViewData["Action"] = "Edit";
 }
 
 @Html.Partial("_ReviewForm", Model)
