--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Reviews/Post.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Reviews/Post.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Review in Progress - Spaceship Clicker";
-    ViewData["ButtonText"] = "Post";
+    ViewData["Action"] = "Post";
 }
 
 @Html.Partial("_ReviewForm", Model)
