--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_LoginPartial.cshtml
@@ -11,6 +11,9 @@
             @if (User.IsInRole(GlobalConstants.AdministratorRole))
             {
                 <li>
+                    <a href="/Admin/Users/List/1">Users</a>
+                </li>
+                <li>
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Reviews<span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu sc-dropdown-menu">
