--- a/SpaceshipClicker/SpaceshipClicker.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using SpaceshipClicker.Constants
+@using SpaceshipClicker.Services.Models.Users
 @using SpaceshipClicker.Web.Models
 @using SpaceshipClicker.Web.Areas.Admin.Models.ReviewViewModels
+@using SpaceshipClicker.Web.Areas.Admin.Models.UserViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
