--- a/SpaceshipClicker/SpaceshipClicker.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,8 @@
 ﻿@using SpaceshipClicker.Constants
+@using SpaceshipClicker.Data.Models.Enums
 @using SpaceshipClicker.Services.Models.Users
 @using SpaceshipClicker.Web.Models
 @using SpaceshipClicker.Web.Areas.Admin.Models.ReviewViewModels
 @using SpaceshipClicker.Web.Areas.Admin.Models.UserViewModels
+@using SpaceshipClicker.Web.Areas.Admin.Models.CrewmateNameViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
