added crewmate names api controller

--- a/SpaceshipClicker/SpaceshipClicker.Web/Areas/Game/Views/Game/Play.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Areas/Game/Views/Game/Play.cshtml
@@ -2,3 +2,36 @@
     ViewData["Title"] = "Spaceship Clicker";
 }
 
+<div class="sc-game">
+    <div class="col-md-7 sc-spaceship-container">
+        <h2>USS Callister</h2>
+        <h1>0 Units</h1>
+        <h4>1 U/s</h4>
+        <img src="~/images/spaceship.png" class="sc-spaceship-img" />
+    </div>
+    <div class="col-md-5">
+        <ul class="sc-crewmate-ul">
+            <li>
+                <ul class="sc-upgrades-ul">
+                    <li class="sc-upgrade" title="Bathroom Upgrade"><span>WC</span></li>
+                    <li class="sc-upgrade"><span><i class="fa fa-lock" aria-hidden="true"></i></span></li>
+                    <li class="sc-upgrade"><span><i class="fa fa-lock" aria-hidden="true"></i></span></li>
+                    <li class="sc-upgrade"><span><i class="fa fa-lock" aria-hidden="true"></i></span></li>
+                </ul>
+                <hr />
+            </li>
+            <li class="sc-crewmate">
+                <img src="~/images/human_male.png" />
+            </li>
+            <li class="sc-crewmate">
+                <img src="~/images/magmar.png" />
+            </li>
+            <li class="sc-crewmate">
+                <img src="~/images/braniac.png" />
+            </li>
+            <li class="sc-crewmate">
+                <img src="~/images/icing.png" />
+            </li>
+        </ul>
+    </div>
+</div>
