--- a/SpaceshipClicker/SpaceshipClicker.Web/wwwroot/css/site.css
+++ b/SpaceshipClicker/SpaceshipClicker.Web/wwwroot/css/site.css
@@ -275,6 +275,90 @@ li.sc-review:hover {
 }
 /*End scrolling animation*/
 
+/*Start game css*/
+.sc-spaceship-container {
+    text-align: center;
+}
+
+.sc-spaceship-img {
+    display: block;
+    width: 345px;
+    height: 460px;
+    margin: 19px auto;
+}
+
+.sc-crewmate-ul {
+    padding: 0;
+    list-style-type: none;
+}
+
+.sc-game > div.col-md-5 {
+    padding: 0;
+}
+
+.sc-crewmate-ul > .sc-crewmate {
+    width: 100%;
+    height: 80px;
+    margin: 15px 0;
+    background-color: #3498DB;
+    border-bottom: solid 4px #ECF0F1;
+}
+
+.sc-crewmate > img {
+    width: 60px;
+    height: 60px;
+    margin: 10px;
+}
+
+.sc-upgrades-ul {
+    list-style-type: none;
+    padding: 0;
+    margin-top: 20px;
+}
+
+.sc-upgrade {
+    font-size: 40px;
+    margin-right: 37px;
+    display: inline-block;
+    width: 84px;
+    height: 80px;
+    background-color: #3498DB;
+    border-bottom: solid 4px #ECF0F1;
+    text-align: center;
+}
+
+.sc-upgrade > span,
+.sc-upgrade-bought > span {
+    display: block;
+    margin-top: 10px;
+}
+
+.sc-upgrade-bought {
+    font-size: 40px;
+    margin-right: 37px;
+    display: inline-block;
+    width: 84px;
+    height: 80px;
+    background-color: #ECF0F1;
+    border-bottom: solid 4px #E74C3C;
+    color: #E74C3C;
+    text-align: center;
+}
+
+.sc-upgrade:hover,
+.sc-crewmate:hover {
+    cursor: pointer;
+    background-color: #ECF0F1;
+    border-color: #3498DB;
+    color: #3498DB;
+}
+
+.sc-upgrades-ul > li:last-child.sc-upgrade {
+    margin-right: 0;
+}
+
+/*End game css*/
+
 .sc-footer {
     position: relative;
     height: 50px;
