added crewmate email service, controller, views and api

--- a/SpaceshipClicker/SpaceshipClicker.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,8 +1,11 @@
-﻿@using SpaceshipClicker.Constants
+﻿@using Microsoft.AspNetCore.Identity
+@using SpaceshipClicker.Constants
+@using SpaceshipClicker.Data.Models
 @using SpaceshipClicker.Data.Models.Enums
 @using SpaceshipClicker.Services.Models.Users
 @using SpaceshipClicker.Web.Models
 @using SpaceshipClicker.Web.Areas.Admin.Models.ReviewViewModels
 @using SpaceshipClicker.Web.Areas.Admin.Models.UserViewModels
 @using SpaceshipClicker.Web.Areas.Admin.Models.CrewmateNameViewModels
+@using SpaceshipClicker.Web.Areas.Admin.Models.CrewmateEmailViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
