--- a/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_LoginPartial.cshtml
+++ b/SpaceshipClicker/SpaceshipClicker.Web/Views/Shared/_LoginPartial.cshtml
@@ -8,16 +8,21 @@
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a href="/Game">Spaceship</a>
+            </li>
             @if (User.IsInRole(GlobalConstants.AdministratorRole))
             {
-                <li>
-                    <a href="/Game">Spaceship</a>
-                </li>
                 <li>
                     <a href="/Admin/Users/List/1">Users</a>
                 </li>
                 <li>
-                    <a href="/Admin/Names/List/All/1">Names</a>
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Add<span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu sc-dropdown-menu">
+                        <li><a href="/Admin/Names/List/All/1">Name</a></li>
+                        <li><a href="/Admin/Emails/List/1">Email</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">Reviews<span class="caret"></span>
@@ -27,22 +32,7 @@
                         <li><a href="/Admin/Reviews/List/1">As Admin</a></li>
                     </ul>
                 </li>
-            }
-            else
-            {
-                <li>
-                    <a href="/Game">Spaceship</a>
-                </li>
-                <li>
-                    <a asp-area="" asp-controller="" asp-action="" title="">Crew</a>
-                </li>
-                <li>
-                    <a asp-area="" asp-controller="" asp-action="" title="">Notifications</a>
-                </li>
-                <li>
-                    <a asp-area="" asp-controller="" asp-action="" title="">Messages</a>
-                </li>
-            }   
+            } 
             <li class="sc-logout-fix">
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log out</button>
             </li>
